[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.tscn" type="PackedScene" id=1]
[ext_resource path="res://Construct.gd" type="Script" id=2]
[ext_resource path="res://addons/godot-openvr/OpenVRFocus.gdns" type="Script" id=3]
[ext_resource path="res://addons/godot-openvr/OpenVRAction.gdns" type="Script" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	
	// regular Linear -> SRGB conversion
	vec3 a = vec3(0.055);
	color.rgb = mix((vec3(1.0) + a) * pow(color.rgb, vec3(1.0 / 2.4)) - a, 12.92 * color.rgb, lessThan(color.rgb, vec3(0.0031308)));
	
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="Construct" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_right = 794.0
margin_bottom = 496.0
expand = true
stretch_mode = 7
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
arvr = true
size = Vector2( 100, 100 )
msaa = 1
keep_3d_linear = true
render_target_update_mode = 3
audio_listener_enable_3d = true
shadow_atlas_size = 4096

[node name="Main" parent="Viewport" instance=ExtResource( 1 )]

[node name="Left_Hand" parent="Viewport/Main/Player" index="1"]
pause_mode = 1

[node name="Right_Hand" parent="Viewport/Main/Player" index="2"]
pause_mode = 1

[node name="ovr_left_hand" parent="Viewport/Main/Player" index="6"]
pause_mode = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1.25, 0 )

[node name="ovr_right_hand" parent="Viewport/Main/Player" index="7"]
pause_mode = 1
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.25, 0 )

[node name="Pause" type="Node" parent="Viewport/Main"]
pause_mode = 2
script = ExtResource( 4 )
pressed_action = "/actions/godot/in/button_ax"
on_hand = 1

[node name="PauseOnDashboard" type="Node" parent="Viewport/Main"]
pause_mode = 2
script = ExtResource( 3 )
use_auto_pause = true

[connection signal="released" from="Viewport/Main/Pause" to="." method="_on_Pause_released"]
[connection signal="dashboard_closed" from="Viewport/Main/PauseOnDashboard" to="." method="_on_PauseOnDashboard_dashboard_closed"]
[connection signal="dashboard_opened" from="Viewport/Main/PauseOnDashboard" to="." method="_on_PauseOnDashboard_dashboard_opened"]

[editable path="Viewport/Main"]
